--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/SoftPWM"]
 	path = src/SoftPWM
 	url = https://github.com/bhagman/SoftPWM/
+[submodule "src/RTClib"]
+	path = src/RTClib
+	url = https://github.com/adafruit/RTClib.git
