Move input buttons to new file
This commit moves the code for initializing and reading the input buttons to a new file, and it uses the Bounce2 debouncing library to debounce the buttons. The Bounce2 library is added as a submodule. After this change, I can run the code and cause the LEDs to illuminate upon a button press.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "src/RTClib"]
 	path = src/RTClib
 	url = https://github.com/adafruit/RTClib.git
+[submodule "src/Bounce2"]
+	path = src/Bounce2
+	url = https://github.com/thomasfredericks/Bounce2.git
